changed the config

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "host": "cps-database.gonzaga.edu",
-    "user": "bpoblette",
-    "password": "stillwater117",
-    "database": "bpoblette_DB"
+    "user": "",
+    "password": "",
+    "database": ""
 }
